# typrua

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
rpm/: typrua.spec
src/: CMakeLists.txt  entry.cxx
src/managers/: app_manager.cxx  app_manager.h  display_manager.cxx  display_manager.h  editor_manager.cxx  editor_manager.h  folder_manager.cxx  folder_manager.h  gui_manager.cxx  gui_manager.h
src/models/: editor_model.cxx  editor_model.h  folder_model.cxx  folder_model.h
src/resources/: gen_rc.py  main.qrc
src/resources/components/: ActiveTab.qml  ContentMenu.qml  FluentWindow.qml  IconButton.qml  InputArea.qml  InputBox.qml  KeyTapEvent.qml  Loader.qml  PushArea.qml  PushButton.qml  RadioButton.qml  SearchBox.qml  ShortcutEvent.qml  Switch.qml  TextLabel.qml  UXScrollBar.qml
src/resources/views/: Editor.qml  EditorPage.qml  MainWindow.qml  PreviewPage.qml  SideBar.qml  TitleBar.qml
src/resources/web/: index.html  preview.html  typrua.js
